Make user o var where the variable type is obvious